feat(server): `/logger`
