# server/server.go
@@ -2,6 +2,7 @@ package main
 
 import (
 	"check_coin_product"
+	"encoding/json"
 	"fmt"
 	"log"
 	"net/http"
@@ -11,6 +12,14 @@ import (
 	"github.com/joho/godotenv"
 	utils "github.com/shawnyu5/penguin-utils"
 )
+
+type Product struct {
+	Title               string  `json:"title"`
+	Description         string  `json:"description"`
+	Original_price      float64 `json:"original_price"`
+	Discount_price      float64 `json:"discount_price"`
+	Discount_percentage float64 `json:"discount_percentage"`
+}
 
 func main() {
 	routes := make(map[string]func(http.ResponseWriter, *http.Request))
@@ -64,20 +73,22 @@ func homeHandler(routes map[string]func(http.ResponseWriter, *http.Request)) htt
 }
 
 func loggerHandler(w http.ResponseWriter, r *http.Request) {
-	type Product struct {
-		Title               string  `json:"title"`
-		Description         string  `json:"description"`
-		Original_price      float64 `json:"original_price"`
-		Discount_price      float64 `json:"discount_price"`
-		Discount_percentage float64 `json:"discount_percentage"`
-	}
 	c := colly.NewCollector(
 		colly.AllowedDomains("www.penguinmagic.com", "www.penguinmagic.com/openbox/"),
 	)
 	product := Product{}
 
 	utils.GetTitle(c, &product.Title)
+	utils.GetDescription(c, &product.Description)
+	utils.GetPrice(c, &product.Original_price)
+	utils.GetDiscountedPrice(c, &product.Discount_price)
+	utils.GetDiscountPercentage(c, &product.Discount_percentage)
 
-	fmt.Println(fmt.Sprintf("loggerHandler product.Title: %+v", product)) // __AUTO_GENERATED_PRINT_VAR__
 	c.Visit("https://www.penguinmagic.com/openbox/")
+	fmt.Println(fmt.Sprintf("loggerHandler product.Title: %+v", product)) // __AUTO_GENERATED_PRINT_VAR__
+	j, err := json.Marshal(product)
+	if err != nil {
+		panic(err)
+	}
+	fmt.Fprintln(w, string(j))
 }
